--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   font-style: normal;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
